--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <title>国試マップ</title>
+
+<link rel="apple-touch-icon" herf="SPアイコン画像180.png">
+
 <style>
 body {
   font-family: sans-serif;
