--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
 <link rel="apple-touch-icon" herf="SPアイコン画像180.png">
 
+<!-- iPhone/iPad用ホーム画面アイコン -->
+<link rel="apple-touch-icon" sizes="180x180" href="SPアイコン画像180.png">
+<link rel="apple-touch-icon" sizes="152x152" href="SPアイコン画像152.png">
+<link rel="apple-touch-icon" sizes="120x120" href="SPアイコン画像120.png">
+
 <style>
 body {
   font-family: sans-serif;
