--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>国試マップ</title>
+<title>進捗マップ</title>
 
-<link rel="apple-touch-icon" herf="SPアイコン画像180.png">
+<meta name="apple-mobile-web-app-title" content="進捗マップ">
 
-<!-- iPhone/iPad用ホーム画面アイコン -->
-<link rel="apple-touch-icon" sizes="180x180" href="SPアイコン画像180.png">
-<link rel="apple-touch-icon" sizes="152x152" href="SPアイコン画像152.png">
-<link rel="apple-touch-icon" sizes="120x120" href="SPアイコン画像120.png">
+<!-- iOS ホーム画面アイコン -->
+<link rel="apple-touch-icon" sizes="180x180" href="icon-180.png">
+<link rel="apple-touch-icon" sizes="152x152" href="icon-152.png">
+<link rel="apple-touch-icon" sizes="120x120" href="icon-120.png">
 
 <style>
 body {
