--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <title>進捗マップ</title>
 
+<!-- ホーム画面表示名（iOS） -->
 <meta name="apple-mobile-web-app-title" content="進捗マップ">
 
 <!-- iOS ホーム画面アイコン -->
@@ -101,7 +102,7 @@ html, body {
 </head>
 <body>
 
-<h1>国試マップ</h1>
+<h1>進捗マップ</h1>
 
 <!-- 年度タブ -->
 <div class="tabs">
