--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <!-- ホーム画面表示名（iOS） -->
 <meta name="apple-mobile-web-app-title" content="進捗マップ">
 
-<!-- iOS ホーム画面アイコン -->
-<link rel="apple-touch-icon" sizes="180x180" href="icon-180.png">
-<link rel="apple-touch-icon" sizes="152x152" href="icon-152.png">
-<link rel="apple-touch-icon" sizes="120x120" href="icon-120.png">
+<!-- iOS ホーム画面アイコン（絶対 URL） -->
+<link rel="apple-touch-icon" sizes="180x180" href="https://ellie8341.github.io/kokushi-map/icon-180.png">
+<link rel="apple-touch-icon" sizes="152x152" href="https://ellie8341.github.io/kokushi-map/icon-152.png">
+<link rel="apple-touch-icon" sizes="120x120" href="https://ellie8341.github.io/kokushi-map/icon-120.png">
 
 <style>
 body {
